@startuml

package MODELO as "MODELO" {
    class Board
    class Piece
    class Position
}

package "VISTA" {
    class BoardView
    class PieceView
}

package "CONTROLADOR" {
    class Tetris
}

package "UTILIDADES" {
    class PieceFactory
    class Console
}


Game --> Tetris : creates
Tetris *-- Board : controls
Tetris *-- BoardView : uses
Tetris --> PieceView : manages current
Tetris ---> Console : uses
Tetris ---> PieceFactory : uses

Board *-- Piece : manages current
Piece *-- Position : contains

BoardView --> Console : uses
BoardView --> Board : renders
BoardView --> PieceView : uses
PieceView --> Piece : renders

PieceFactory ..> Piece : creates
PieceFactory ..> PieceView : creates


@enduml